# MSTK

./: CMakeLists.txt  LICENSE.MIT  PREAMBLE.MIT  README  README.md
cmake/: macros.cmake
cmake/modules/: FindVigra.cmake  TestForCppNamespaces.cmake  TestForCppNamespaces.cpp
cmake/scripts/: coverage.sh.in
doc/: Doxyfile.cmake  Mainpage.h
doc/aas/: AminoAcidExamples.h  AminoAcidSequenceExamples.h  Complex1.h  ElementsExamples.h  ModificationExamples.h  RawAminoAcidExamples.h  RawModificationExamples.h  ResidueExamples.h  StoichiometryConfigs.h
examples/: CMakeLists.txt
examples/aas/: AminoAcid.cpp  AminoAcidSequence.cpp  CMakeLists.txt  Complex1.cpp  Elements.cpp  Modifications.cpp  RawAminoAcid.cpp  RawModifications.cpp  Residue.cpp  StoichiometryConfigs.cpp
examples/ipaca/: CMakeLists.txt  IsotopeCalculation.cpp
include/MSTK/: config.hpp.cmake
include/MSTK/aas/: AminoAcid.hpp  AminoAcidSequence.hpp  Collection.hpp  Element.hpp  ElementImpl.hpp  Isotope.hpp  Modification.hpp  RawAminoAcid.hpp  RawAminoAcidImpl.hpp  RawModification.hpp  RawModificationImpl.hpp  Residue.hpp  Specificity.hpp  Stoichiometry.hpp  StoichiometryConfig.hpp  StoichiometryConfigImpl.hpp  aas.hpp  config.hpp.cmake
include/MSTK/aas/adapter/: LibIPACA.hpp
include/MSTK/aas/tools/: Digester.hpp  FastaReader.hpp
include/MSTK/common/: CardinalityLessThan.hpp  Collection.hpp  Error.hpp  Log.hpp  Types.hpp  common.hpp  constrainToRange.hpp
include/MSTK/fe/: CentroidTraits.hpp  CentroidWeightedMeanDisambiguator.hpp  Centroider.hpp  GaussianMeanAccumulator.hpp  IsotopePatternCreator.hpp  IsotopePatternExtractor.hpp  IsotopePatternTraits.hpp  NopSplitter.hpp  QuickCharge.hpp  RunningMeanSmoother.hpp  SimpleBumpFinder.hpp  SpectrumTraits.hpp  Splitter.hpp  SumAbundanceAccumulator.hpp  UncenteredCorrelation.hpp  XicCreator.hpp  XicExtractor.hpp  XicLocalMinSplitter.hpp  XicTraits.hpp  triangularIntegration.hpp  utils.hpp
include/MSTK/fe/types/: Centroid.hpp  CentroidFbiTraits.hpp  IsotopePattern.hpp  Spectrum.hpp  Xic.hpp  XicFbiTraits.hpp
include/MSTK/ipaca/: Mercury7.hpp  Mercury7Impl.hpp  Spectrum.hpp  Stoichiometry.hpp  Traits.hpp
include/MSTK/psf/: Error.hpp  PeakParameter.hpp  PeakShape.hpp  PeakShapeFunction.hpp  SpectrumAlgorithm.hpp
include/MSTK/psf/types/: Spectrum.hpp
lib/: CMakeLists.txt
lib/vigra/: CMakeLists.txt
lib/vigra/include/: CMakeLists.txt
lib/vigra/include/vigra/: CMakeLists.txt
src/: CMakeLists.txt  config.cpp.cmake
src/aas/: AminoAcid.cpp  AminoAcidSequence.cpp  CMakeLists.txt  Element.cpp  ElementImpl.cpp  Isotope.cpp  Modification.cpp  RawAminoAcid.cpp  RawAminoAcidImpl.cpp  RawModification.cpp  RawModificationImpl.cpp  Residue.cpp  Specificity.cpp  Stoichiometry.cpp  StoichiometryConfig.cpp  StoichiometryConfigImpl.cpp
src/aas/tools/: Digester.cpp  FastaReader.cpp
src/common/: CMakeLists.txt  Error.cpp
src/fe/: CMakeLists.txt  CentroidWeightedMeanDisambiguator.cpp  GaussianMeanAccumulator.cpp  RunningMeanSmoother.cpp  SimpleBumpFinder.cpp  SumAbundanceAccumulator.cpp  UncenteredCorrelation.cpp
src/fe/types/: Centroid.cpp  IsotopePattern.cpp  Spectrum.cpp  Xic.cpp
src/ipaca/: CMakeLists.txt  Mercury7Impl.cpp  Spectrum.cpp  Stoichiometry.cpp  Traits.cpp
src/psf/: BoxPeakShape.cpp  CMakeLists.txt  ConstantModel.cpp  GaussianPeakShape.cpp  LinearSqrtModel.cpp  LorentzianPeakShape.cpp  PeakShapeFunction.cpp  QuadraticModel.cpp  SqrtModel.cpp
tests/: CMakeLists.txt  generatetest.py  memtest.py  runMemcheck.py  testdata.hpp.in  testtemplate.txt
tests/aas/: AminoAcid-test.cpp  AminoAcidSequence-test.cpp  CMakeLists.txt  Combination-test.cpp  Digester-test.cpp  Element-test.cpp  FastaReader-test.cpp  Isotope-test.cpp  Modification-test.cpp  RawAminoAcid-test.cpp  RawModification-test.cpp  Residue-test.cpp  Specificity-test.cpp  Stoichiometry-test.cpp  StoichiometryConfig-test.cpp
tests/common/: CMakeLists.txt  Collection-test.cpp  Error-test.cpp  Log-test.cpp
tests/fe/: CMakeLists.txt  Centroid-test.cpp  CentroidWeightedMeanDisambiguator-test.cpp  Centroider-test.cpp  GaussianMeanAccumulator-test.cpp  IsotopePattern-test.cpp  IsotopePatternExtractor-test.cpp  QuickCharge-test.cpp  RunningMeanSmoother-test.cpp  SimpleBumpFinder-test.cpp  Spectrum-test.cpp  Splitter-test.cpp  SumAbundanceAccumulator-test.cpp  UncenteredCorrelation-test.cpp  Xic-test.cpp  XicExtractor-test.cpp  XicLocalMinSplitter-test.cpp  utilities.cpp  utilities.hpp
tests/ipaca/: CMakeLists.txt  Mercury7-test.cpp  Mercury7Impl-test.cpp  Stoichiometry-test.cpp
tests/psf/: CMakeLists.txt  PeakParameter-test.cpp  PeakShape-test.cpp  PeakShapeFunction-test.cpp  SpectrumAlgorithm-test.cpp  testdata.hpp.in
tests/psf/testdata/PeakShapeFunctionTemplate/: realistic_ms1.wsv
tests/psf/testdata/shared_data/: orbi_ms1.wsv
